--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="b5">שניות</string>
     <string name="b1">קח נשימה עמוקה</string>
     <string name="med">תרופות</string>
+    <string name="Pactivity">פעילות גופנית</string>
 </resources>
