--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,16 +26,16 @@
     <string name="addAlert">+ הוסף תזכורת</string>
     <string name="addBtn">+ הוסף</string>
 
-    <string-array name="planets_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
-        <item>Other</item>
+    <string-array name="foods_array">
+        <item>אבטיח</item>
+        <item>תפוח</item>
+        <item>פסטה</item>
+        <item>אורז</item>
+        <item>עגבניה</item>
+        <item>חלב</item>
+        <item>יוגורט</item>
+        <item>מלפפון</item>
+        <item>בצל</item>
     </string-array>
     <string name="title_activity_nutrition">Nutrition</string>
 
