--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
         <item>יוגורט</item>
         <item>מלפפון</item>
         <item>בצל</item>
+        <item>המבורגר</item>
     </string-array>
     <string name="title_activity_nutrition">Nutrition</string>
 
