--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
         <item>מלפפון</item>
         <item>בצל</item>
         <item>המבורגר</item>
+    </string-array>
     <string-array name="planets_array">
         <item>advil</item>
         <item>orkambi</item>
@@ -49,4 +50,10 @@
     <string name="Pactivity">פעילות גופנית</string>
     <string name="title_activity_med">med</string>
     <string name="title_activity_med_edit">medEdit</string>
+
+    <string-array name="unit_of_measure">
+        <item>יחידה</item>
+        <item>כוס</item>
+        <item>חופן</item>
+    </string-array>
 </resources>
